--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 </head>
-<body style="background-color: #f6f6f6">
+<body style="background-color: #f6f6f6; min-width: 900px; font-family: 'Arvo', serif;">
   <app-root></app-root>
 </body>
 </html>
